// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionsComponent 1`] = `
<div>
  <div>
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      <ol
        class="MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                aria-hidden="true"
                class="MuiBreadcrumbs-separator"
              >
                /
              </li>
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Search Results
                </p>
              </li>
            </ol>
          </nav>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary"
          >
            Hello World
          </p>
        </li>
      </ol>
    </nav>
    <div
      style="text-align: center;"
    >
      <i
        class="fas fa-spinner fa-spin "
      />
    </div>
    <div>
      <p>
        Auto selection: 
        None
      </p>
      <ul />
    </div>
    <ul>
      <li>
        <a
          href="/manual"
        >
          Add manually
        </a>
      </li>
      <li>
        <a
          href="/monitor/add/1"
        >
          Add to monitor
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`OptionsComponent 2`] = `
<div>
  <div>
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      <ol
        class="MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                aria-hidden="true"
                class="MuiBreadcrumbs-separator"
              >
                /
              </li>
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Search Results
                </p>
              </li>
            </ol>
          </nav>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary"
          >
            Hello World
          </p>
        </li>
      </ol>
    </nav>
    <div
      style="text-align: center;"
    >
      <i
        class="fas fa-spinner fa-spin "
      />
    </div>
    <div>
      <p>
        Auto selection: 
        <span>
          <a
            href="/download"
          >
            title
          </a>
           
          <small>
            5
          </small>
           
          
        </span>
      </p>
      <ul>
        <div>
          <h3>
            x264/1080
          </h3>
          <li>
            <span>
              <a
                href="/download"
              >
                title
              </a>
               
              <small>
                5
              </small>
               
              
            </span>
          </li>
        </div>
      </ul>
    </div>
    <ul>
      <li>
        <a
          href="/manual"
        >
          Add manually
        </a>
      </li>
      <li>
        <a
          href="/monitor/add/1"
        >
          Add to monitor
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`OptionsComponent 3`] = `
<div>
  <div>
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
    >
      <ol
        class="MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                aria-hidden="true"
                class="MuiBreadcrumbs-separator"
              >
                /
              </li>
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Search Results
                </p>
              </li>
            </ol>
          </nav>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary"
          >
            Hello World
          </p>
        </li>
      </ol>
    </nav>
    <div
      style="text-align: center;"
    />
    <div>
      <p>
        Auto selection: 
        <span>
          <a
            href="/download"
          >
            title
          </a>
           
          <small>
            5
          </small>
           
          
        </span>
      </p>
      <ul>
        <div>
          <h3>
            x264/1080
          </h3>
          <li>
            <span>
              <a
                href="/download"
              >
                title
              </a>
               
              <small>
                5
              </small>
               
              
            </span>
          </li>
        </div>
      </ul>
    </div>
    <ul>
      <li>
        <a
          href="/manual"
        >
          Add manually
        </a>
      </li>
      <li>
        <a
          href="/monitor/add/1"
        >
          Add to monitor
        </a>
      </li>
    </ul>
  </div>
</div>
`;
